# ImSwitch

./: .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .~lock.Imswitch To Do.docx#  =  =3.15.0  =7.23.1  CITATION.cff  DPC.py  Imswitch To Do.docx  LiveImageQuality.ipynb  MANIFEST.in  README.md  TempestaController.py  Untitled.ipynb  __main__.py  calibFile.json  configfileutils.py  constants.py  construct.yaml  design.docx  dockerfile  error  example_locai.json  example_locai_mock.json  imswitch.spec  info_oil.slm  jdf  main.py  package-lock.json  positions.npy  pyproject.toml  requirements-arm64.txt  requirements-dev.txt  requirements-jetsonorin.txt  requirements-raspi.txt  requirements.txt  setup.cfg  setup.cfg_  (+14 more)
.arkitekt/: .gitignore
.github/ISSUE_TEMPLATE/: bug_report.md  something-else.md
.github/workflows/: docker-test-arm64.yaml  imswitch-bundle.yml  imswitch-docker-amd64.yaml  imswitch-docker-arm64-noqt.yaml  imswitch-docker-multiarch-noqt.yaml  imswitch-docker.yml  imswitch-packconda.yml  imswitch-pypi.yml  imswitch-test.yml  imswitch_updatesubmodule.yml  main.yml
conda/: meta.yaml
conda_script/: imswitch.bat  imswitch.lnk  readme.txt
config/imcontrol_setups/: andreas.json  fra.json  jonatan.json  jonatan_test.json  jonatan_test2.json  jonatan_test_simple.json  monalisa.json  sted.json  xavi.json
config_files/: config.json  fra.json  jonatan.json  jonatan_test.json  jonatan_test_simple.json  options.json  setup.json  xavi.json
controller/: CameraHelper.py  CommunicationChannel.py  Factory.py  MainController.py  MasterController.py  NidaqHelper.py  RecordingHelper.py  ScanHelper.py  ScannerHelper.py  SharedAttributes.py  SignalDesigner.py  TempestaController.py  TempestaErrors.py  controllers.py  enums.py  errors.py  presets.py
controller/controllers/: __init__.py  alignmentcontrollers.py  basecontrollers.py  focuslockcontroller.py  hardwarecontrollers.py  imagecontrollers.py  scancontrollers.py
controller/helpers/: CameraHelper.py  FocusLockHelper.py  LaserHelper.py  NidaqHelper.py  PiezoconceptZHelper.py  RecordingHelper.py  SLMHelper.py  ScanHelper.py
docker/: .env  README.md  compose.yaml  dockerCondaARM  dockerfile  dockerfileImSwitch  dockerfileImSwitchAMDNoQT  dockerfileImSwitchARM  dockerfileImSwitchARMNoQT  dockerfileMAC  dockerfileNapari  entrypoint.sh  start_ssh.sh
docker/HIK/: README.md  _dockerfile  cheatsheet.txt  compose.yaml  docker_arm_noqt.md  dockerfile  dockerfile_arm64only  entrypoint.sh  install.sh  install_docker.sh  install_docker_raspi.sh  start_ssh.sh
docs/: Hdf5datafile.rst  adding-device-support.rst  changelog.rst  conf.py  contributing.rst  gui.rst  imcontrol-setups.rst  index.rst  installation.rst  low-level-managers.rst  modules.rst  scripting.rst  signals.rst  use-cases.rst
docs/api/: _actions.html  _actions.rst  api.imcontrol.html  api.imcontrol.rst  imcontrol.html  mainWindow.rst
framework/: qt.py
imcommon/: applaunch.py  controller.py
imcommon/controller/: ModuleCommunicationChannel.py  basecontrollers.py
imcommon/framework/: base.py  qt.py
imcommon/model/: DataCollection.py  SharedAttributes.py  __init__.py
imcommon/view/: MultiModuleWindow.py  __init__.py  stylesheet.py
imcommon/widgets/: MultiModuleWindow.py
imcontrol/: __init__.py  __main__.py
imcontrol/controller/: CommunicationChannel.py  ImConMainController.py  MasterController.py  __init__.py  configfileutils.py
imcontrol/model/: SetupInfo.py  SignalDesigner.py  __init__.py  errors.py
imcontrol/view/: ImConMainView.py
imreconstruct/: Reconstruction_widget.py  __init__.py  __main__.py
imreconstruct/controller/: CommunicationChannel.py  DataEditController.py  DataFrameController.py  ImRecMainController.py  ImRecMainViewController.py  MultiDataFrameController.py  ReconstructionViewController.py  ScanParamsController.py  __init__.py  basecontrollers.py
imreconstruct/core/: DataObj.py  PatternFinder.py  ReconObj.py  SignalExtractor.py
imreconstruct/dataedit/: __init__.py  widgets.py
imreconstruct/mainwindow/: controllers.py  widgets.py
imreconstruct/model/: DataObj.py  PatternFinder.py  ReconObj.py  SignalExtractor.py  __init__.py
imreconstruct/multidata/: controllers.py  widgets.py
imreconstruct/reconstructionview/: controllers.py  widgets.py
imreconstruct/scanparams/: widgets.py
imreconstruct/view/: DataEditDialog.py  DataFrame.py  ImRecMainView.py  MultiDataFrame.py  ReconstructionView.py  ScanParamsDialog.py  __init__.py
imscripting/: __init__.py
imscripting/controller/: CommunicationChannel.py  ConsoleController.py  FilesController.py  ImScrMainController.py  ImScrMainViewController.py  basecontrollers.py
imscripting/model/: __init__.py  actions.py
imswitch/: __init__.py  __main__.py
imswitch-conda-recipe/: meta.yaml
model/: MainModel.py  NidaqManagerOldAdditions.py  SLM.py  SetupInfo.py  SignalDesigner.py  TempestaModel.py  __init__.py  config.py  hamamatsu.py  instruments.py  mockers.py  oldinstruments.py  piezoPiezoconceptZ.py  tiscamera.py
paper/: paper.bib  paper.md
presets/: _default.json
scans/: beadscan  dronpa  fatigue  photophysics  rs2  rs2_fra  test2  testXav  testXavi  testps
tests/: test_stores.py
tools/: ConnectToImSwitch.py  GxSingleCamMonoSIMDisplay.py  INSTALL_RASPI.sh  LoadSaveOMETiff.py  SRRFstandalone.py  SaveLoadHDF5Append.py  SaveLoadHdf5.py  bioimageIoExtension.py  drawNetwork.py  example_request.py  fastapiSIM.py  fastapiSIM_zmq.py  fastapiSIM_zmqBD.py  flimlabsSocket.py  genOffAxisHolo.py  generateapidocs.py  generatedocs.py  hyphaExtension.py  hypha_imswitch_extension.py  hypha_microscope_plugin.imjoy.html  hypha_microscope_server.py  imagestitching.py  import h5py.py  imswitchLangchain.py  loadOME.py  loadOME_thenStitch.py  loadTimeSeriesStackChannel.py  mctreaddata.py  processImageOnString.py  pygameImages.py  readtimelapseimages.py  ringgui.py  runAshlar.py  saveFileOnExternalDriveLinux.py  saveOME.py  scanExportImSwitchManagers.py  simulatepsf.py  stageCalibration.py  startWebcam.py  stitchAshlar.py  (+10 more)
view/: MainView.py  TempestaView.py  guitools.py  widgets.py
(+2336 files in other folders)
