[metadata]
name = ImSwitch
version = attr: imswitch.__version__
author = Xavier Casas Moreno
author_email = xaviercm@kth.se
description = Microscopy control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kasasxav/ImSwitch
project_urls =
    Bug Tracker = https://github.com/kasasxav/ImSwitch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    coloredlogs >= 15
    colour-science >= 0.3
    dataclasses-json >= 0.5
    h5py >= 3
    pyvisa-py==0.4.1
    lantzdev[qt] >= 0.5.2
    luddite >= 1
    napari[pyqt5]
    nidaqmx >= 0.5.7
    numpy >= 1.19
    packaging >= 19
    psutil >= 5.4.8
    PyQt5 >= 5.15.2
    pyqtgraph >= 0.12.1
    microscope
    pyserial >= 3.4
    QDarkStyle >= 3
    QScintilla >= 2.12
    qtpy >= 1.9
    requests >= 2.25
    scikit-image >= 0.18
    Send2Trash >= 1.8
    tifffile >= 2020.11.26
    ome_zarr >= 0.6.1
    Pyro5 >= 5.14
    fastAPI >= 0.86.0
    uvicorn[standard] >= 0.19.0
    matplotlib >= 3.6
    pymmcore-plus
    pycromanager
    opencv-python
    msgpack

[options.entry_points]
console_scripts =
    imswitch = imswitch.__main__:main
