[metadata]
name = ImSwitch
version = attr: imswitch.__version__
author = "Xavier Casas Moreno, Benedict Diederich, Jacopo Abramo"
author_email = "xaviercm@kth.se, benedictdied@gmail.com, abramojacopo@ipht-jena.de"
description = Microscopy control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ImSwitch/ImSwitch
project_urls =
    Bug Tracker = https://github.com/ImSwitch/ImSwitch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True

python_requires = >=3.8
install_requires=
    pydantic
    coloredlogs >= 15
    colour-science >= 0.3
    dataclasses-json >= 0.5
    h5py >= 3
    pyvisa-py==0.4.1
    lantzdev[qt] >= 0.5.2
    luddite >= 1
    napari[pyqt5]
    nidaqmx >= 0.5.7
    numpy == 1.23.5
    packaging >= 19
    aiortc>=1.3.0
    PyQt5 >= 5.15.6
    pyqtgraph >= 0.12.1
    microscope >= 0.3.0
    pyserial >= 3.4
    QDarkStyle >= 3
    qtpy >= 1.9
    requests >= 2.25
    scikit-image >= 0.18
    Send2Trash >= 1.8
    tifffile >= 2020.11.26
    zeroconf >= 0.39.0
    pymba >= 0.3.7
    opencv-python >= 4.6.0.66
    pco >= 0.1.0
    UC2-REST
    esptool>=4.2.1
    setuptools<60.0.0
    pypylon>=1.8.0
    pandas>=1.3.0
    ome_zarr >= 0.6.1
    napari-sim-processor==0.0.10
    Pyro5 >= 5.14
    fastAPI >= 0.86.0
    uvicorn[standard] >= 0.19.0
    matplotlib >= 3.6
    PyQtWebEngine >= 5.15.6
    ome_types >= 0.2.7
    scikit-learn >= 0.24.2
    QScintilla >= 2.12
    aiortc >= 1.3.0
    imjoy-rpc 
    hypha>=0.15.31
    imjoy
    opencv-python
    msgpack

[options.entry_points]
console_scripts =
    imswitch = imswitch.__main__:main

